--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
   "dependencies": {
     "@babel/polyfill": "^7.12.1",
     "core-js": "^3.26.1",
-    "dwt": "^18.2.0"
+    "dwt": "^18.2.0",
+    "tesseract.js": "^4.0.5"
   }
 }
